# ai-builders-week-3

./: .gitignore  README.md  download_jobs_postings.py  embeddings.ipynb  jobs.csv  jobs_normalized.csv  list_batches.py  pyproject.toml
